--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.formatprotectiondata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.formatprotectiondata.yml
@@ -1,51 +1,43 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 4897f8f545b07c58c230fcb476a416f3b547f898
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116918"
 items:
-- uid: excel_release.Excel.Interfaces.FormatProtectionData
-  summary: <span data-ttu-id="f5245-101">描述通过调用 "formatProtection ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="f5245-101">An interface describing the data returned by calling "formatProtection.toJSON()".</span></span>
-  name: Excel.Interfaces.FormatProtectionData
-  fullName: Excel.Interfaces.FormatProtectionData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.FormatProtectionData.formulaHidden
-  - excel_release.Excel.Interfaces.FormatProtectionData.locked
-- uid: excel_release.Excel.Interfaces.FormatProtectionData.formulaHidden
-  summary: >-
-    <span data-ttu-id="f5245-p101">表示 Excel 是否隐藏区域中的单元格公式。指示整个区域不具有统一公式隐藏设置的空值。</span><span class="sxs-lookup"><span data-stu-id="f5245-p101">Indicates if Excel hides the formula for the cells in the range. A null value indicates that the entire range doesn't have uniform formula hidden setting.</span></span>
+  - uid: excel_release.Excel.Interfaces.FormatProtectionData
+    summary: <span data-ttu-id="c7227-101">描述通过调用 "formatProtection ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="c7227-101">An interface describing the data returned by calling "formatProtection.toJSON()".</span></span>
+    name: Excel.Interfaces.FormatProtectionData
+    fullName: Excel.Interfaces.FormatProtectionData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.FormatProtectionData.formulaHidden
+      - excel_release.Excel.Interfaces.FormatProtectionData.locked
+  - uid: excel_release.Excel.Interfaces.FormatProtectionData.formulaHidden
+    summary: |-
+      <span data-ttu-id="c7227-p101">表示 Excel 是否隐藏区域中的单元格公式。指示整个区域不具有统一公式隐藏设置的空值。</span><span class="sxs-lookup"><span data-stu-id="c7227-p101">Indicates if Excel hides the formula for the cells in the range. A null value indicates that the entire range doesn't have uniform formula hidden setting.</span></span>
 
+      <span data-ttu-id="c7227-104">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7227-104">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: formulaHidden
+    fullName: formulaHidden
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'formulaHidden?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.FormatProtectionData.locked
+    summary: |-
+      <span data-ttu-id="c7227-105">指示 Excel 是否将对象中的单元格锁定。</span><span class="sxs-lookup"><span data-stu-id="c7227-105">Indicates if Excel locks the cells in the object.</span></span> <span data-ttu-id="c7227-106">指示整个区域不具有统一锁定设置的空值。</span><span class="sxs-lookup"><span data-stu-id="c7227-106">A null value indicates that the entire range doesn't have uniform lock setting.</span></span>
 
-    <span data-ttu-id="f5245-104">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f5245-104">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: formulaHidden
-  fullName: formulaHidden
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'formulaHidden?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.FormatProtectionData.locked
-  summary: >-
-    <span data-ttu-id="f5245-p102">指示 Excel 是否锁定对象中的单元格。指示整个区域不具有统一锁定设置的空值。</span><span class="sxs-lookup"><span data-stu-id="f5245-p102">Indicates if Excel locks the cells in the object. A null value indicates that the entire range doesn't have uniform lock setting.</span></span>
-
-
-    <span data-ttu-id="f5245-107">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f5245-107">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: locked
-  fullName: locked
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'locked?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="c7227-107">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c7227-107">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: locked
+    fullName: locked
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'locked?: boolean;'
+      return:
+        type:
+          - boolean
