--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.iterativecalculationupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.iterativecalculationupdatedata.yml
@@ -1,16 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a74e7242ea50fa4dbcc5f37fffbfa0c4b4fcc926
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30108798"
 items:
-- uid: excel_release.Excel.Interfaces.IterativeCalculationUpdateData
-  summary: <span data-ttu-id="24768-101">用于更新 IterativeCalculation 对象上的数据的接口, 用于在 "IterativeCalculation" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="24768-101">An interface for updating data on the IterativeCalculation object, for use in "iterativeCalculation.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.IterativeCalculationUpdateData
-  fullName: Excel.Interfaces.IterativeCalculationUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
+  - uid: excel_release.Excel.Interfaces.IterativeCalculationUpdateData
+    summary: '<span data-ttu-id="bdbce-101">一个用于更新 IterativeCalculation 对象上的数据的接口, 可用于 "IterativeCalculation (</span><span class="sxs-lookup"><span data-stu-id="bdbce-101">An interface for updating data on the IterativeCalculation object, for use in "iterativeCalculation.set(</span></span><!-- --><span data-ttu-id="bdbce-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="bdbce-102"></span></span><!-- --><span data-ttu-id="bdbce-103">)".</span><span class="sxs-lookup"><span data-stu-id="bdbce-103"></span></span>'
+    name: Excel.Interfaces.IterativeCalculationUpdateData
+    fullName: Excel.Interfaces.IterativeCalculationUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
