--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.pagebreakdata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.pagebreakdata.yml
@@ -1,16 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 96e8fdefa165f1f76b5c9855f6c361506b18e009
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30105144"
 items:
-- uid: excel_release.Excel.Interfaces.PageBreakData
-  summary: <span data-ttu-id="f2ab1-101">描述通过调用 "pageBreak ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="f2ab1-101">An interface describing the data returned by calling "pageBreak.toJSON()".</span></span>
-  name: Excel.Interfaces.PageBreakData
-  fullName: Excel.Interfaces.PageBreakData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
+  - uid: excel_release.Excel.Interfaces.PageBreakData
+    summary: <span data-ttu-id="c6f1f-101">描述通过调用 "pageBreak ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="c6f1f-101">An interface describing the data returned by calling "pageBreak.toJSON()".</span></span>
+    name: Excel.Interfaces.PageBreakData
+    fullName: Excel.Interfaces.PageBreakData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
