--- a/docs/docs-ref-autogen/office-runtime.yml
+++ b/docs/docs-ref-autogen/office-runtime.yml
@@ -7,13 +7,12 @@ items:
       - typeScript
     type: package
     children:
-      - office-runtime.OfficeRuntime.AsyncStorage
       - office-runtime.OfficeRuntime.Dialog
       - office-runtime.OfficeRuntime.displayWebDialog
       - office-runtime.OfficeRuntime.DisplayWebDialogOptions
       - office-runtime.OfficeRuntime.Storage
   - uid: office-runtime.OfficeRuntime.displayWebDialog
-    summary: <span data-ttu-id="153e3-101">启用 "弹出 web" 对话框的方法。</span><span class="sxs-lookup"><span data-stu-id="153e3-101">Method that enables a pop up web dialog box.</span></span>
+    summary: <span data-ttu-id="c9de7-101">启用 "弹出 web" 对话框的方法。</span><span class="sxs-lookup"><span data-stu-id="c9de7-101">Method that enables a pop up web dialog box.</span></span>
     name: OfficeRuntime.displayWebDialog
     fullName: OfficeRuntime.displayWebDialog
     langs:
@@ -27,16 +26,14 @@ items:
         description: ''
       parameters:
         - id: url
-          description: <span data-ttu-id="153e3-102">必须是字符串。</span><span class="sxs-lookup"><span data-stu-id="153e3-102">Must be a string.</span></span>
+          description: <span data-ttu-id="c9de7-102">必须是字符串。</span><span class="sxs-lookup"><span data-stu-id="c9de7-102">Must be a string.</span></span>
           type:
             - string
         - id: options
-          description: <span data-ttu-id="153e3-103">可选参数。</span><span class="sxs-lookup"><span data-stu-id="153e3-103">Optional parameter.</span></span> <span data-ttu-id="153e3-104">必须为 DisplayWebDialogOptions 类型。</span><span class="sxs-lookup"><span data-stu-id="153e3-104">Must be of type DisplayWebDialogOptions.</span></span>
+          description: <span data-ttu-id="c9de7-103">可选参数。</span><span class="sxs-lookup"><span data-stu-id="c9de7-103">Optional parameter.</span></span> <span data-ttu-id="c9de7-104">必须为 DisplayWebDialogOptions 类型。</span><span class="sxs-lookup"><span data-stu-id="c9de7-104">Must be of type DisplayWebDialogOptions.</span></span>
           type:
             - office-runtime.OfficeRuntime.DisplayWebDialogOptions
 references:
-  - uid: office-runtime.OfficeRuntime.AsyncStorage
-    name: OfficeRuntime.AsyncStorage
   - uid: office-runtime.OfficeRuntime.Dialog
     name: OfficeRuntime.Dialog
   - uid: office-runtime.OfficeRuntime.DisplayWebDialogOptions
